--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Plant Match - Busca tu planta ideal</title>
+    <meta
+      name="description"
+      content="Encontrá la planta perfecta para vos con Plant Match"
+    />
   </head>
   <body>
     <div id="root"></div>
